<resources>
    <string name="app_name">PizzaRestaurant</string>
    <string name="button">Button</string>
    <string name="store">Store</string>
    <string name="spinner_prompt">prompt\n</string>
    <string name="your_name">Your Name\n</string>
    <string name="prompt_name">Please fill your name</string>
    <string name="submit">Submit</string>

    <string name="name_bar">Hello, Vina</string>
    <string name="location">Location</string>
    <string name="findonmap">Find On Map</string>
    <string name="lokasi">Cihampelas</string>

    <string name="pepperoni_title">Pepperoni</string>
    <string name="pepperoni_p">Cocok bagi anda yang ingin merasakan pizza original dengan taburan keju dan daging asap yang lezat</string>
    <string name="spaghetti_title">Spagheti</string>
    <string name="spaghetti_p">Cocok bagi anda yang ingin merasakan spaghetti original dengan bumbu yang oriental</string>
    <string name="burger_title">Burger</string>
    <string name="burger_p">Cocok bagi anda yang ingin merasakan kelembutan burger berlapiskan keju, sayuran dan daging yang tebal</string>
    <string name="steak_title">Steak</string>
    <string name="steak_p">Cocok bagi anda yang ingin merasakan lezatnya daging steak dipadukan dengan kentang yang lezat</string>

    <string name="pepperoni_title_order">Pepperoni Pizza</string>
    <string name="price_rp">Price: Rp 66.000,00</string>
    <string name="pepperoni_desc">Pepperoni pizza adalah pizza yang memiliki topping daging pepperoni sapi asli. Di Italia, pepperoni disebut salame piccante (salami panas). Biasa menjadi bahan baku pizza di Amerika Serikat, yang sering mewakili 30% pelengkap. Pizza ini cocok untuk santap siang ataupun malam anda</string>


    <string name="order_detail">Order Detail</string>
    <string name="detail_nama">Vina</string>
    <string name="detail_store">Store : Cihampelas</string>
    <string name="detail_pesanan">Pepperoni sudah dipesan</string>
    <string name="pengiriman">Pengiriman</string>
    <string name="btn_see_menus">See Menus</string>
    <!--    <string name="pesan">Terima kasih Vina sudah memesan \nditoko kami, pesanan Pepperoni Pizza \nanda dikirim menggunakan Fast Delivery</string>-->

</resources>