<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:backgroundTint="#D52F2F"
        android:text="@string/btn_see_menus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.723" />

    <View
        android:id="@+id/person_male"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/person_male"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <View
        android:id="@+id/main_1"
        android:layout_width="411dp"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/main_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16"
        tools:layout_editor_absoluteX="0dp" />


    <TextView
        android:id="@+id/name"
        android:layout_width="189dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/name_bar"
        android:textAppearance="@style/your_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/store_text"
        android:layout_width="189dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/store"
        android:textAppearance="@style/your_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/lokasi"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="TextSizeCheck" />


    <TextView
        android:id="@+id/lokasi"
        android:layout_width="160dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/lokasi"
        android:textAppearance="@style/your_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/location"
        android:layout_width="189dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/location"
        android:textAppearance="@style/location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/location_pin"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/findonmap"
        android:layout_width="143dp"
        android:layout_height="26dp"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/findonmap"
        android:textAppearance="@style/location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58"
        tools:ignore="TextSizeCheck" />

    <View
        android:id="@+id/location_pin"
        android:layout_width="24dp"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/location_pin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.581" />


</androidx.constraintlayout.widget.ConstraintLayout>