<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <View
        android:id="@+id/rm_pizza_1"
        android:layout_width="223dp"
        android:layout_height="264dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/rm_pizza_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/your_name"
        android:layout_width="188dp"
        android:layout_height="24dp"

        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/your_name"
        android:textAppearance="@style/your_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717"
        tools:ignore="TextSizeCheck" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/store"
        android:layout_width="189dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/store"
        android:textAppearance="@style/your_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rm_pizza_1"
        app:layout_constraintVertical_bias="0.125"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/name_box"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/prompt_name"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/submit1_button"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:backgroundTint="#D52F2F"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

</androidx.constraintlayout.widget.ConstraintLayout>