<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FourActivity">


    <TextView
        android:id="@+id/pepperoni_desc"
        android:layout_width="378dp"
        android:layout_height="131dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/pepperoni_desc"
        android:textAppearance="@style/pepperoni_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_2"
        app:layout_constraintVertical_bias="0.55" />

    <Button
        android:id="@+id/btnback"
        android:layout_width="365dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:backgroundTint="#D52F2F"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.796" />

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="365dp"
        android:layout_height="48dp"
        android:backgroundTint="#D52F2F"
        android:text="Order Now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_2"
        app:layout_constraintVertical_bias="0.709" />

    <TextView
        android:id="@+id/price_rp"
        android:layout_width="171dp"
        android:layout_height="21dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:gravity="top"
        android:text="@string/price_rp"
        android:textAppearance="@style/price_rp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_2"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/main_2"
        android:layout_width="411dp"
        android:layout_height="250dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/main_2"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="1dp" />

    <TextView
        android:id="@+id/pepperoni_title_order"
        android:layout_width="181dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/pepperoni_title_order"
        android:textAppearance="@style/pepperoni_title_order"
        app:layout_constraintBottom_toBottomOf="@+id/main_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/main_2"
        app:layout_constraintVertical_bias="0.936" />

</androidx.constraintlayout.widget.ConstraintLayout>